# behavior-stack-example

./: CMakeLists.txt  README.md
BT_protocol/: BT_wrappers.thrift  CMakeLists.txt  CMakeLists.txt.autosave  SkillAck.cpp  SkillAck.h  SkillStatus.cpp  Skill_request.cpp  Skill_request.h
apps/: CounterManagerExample.xml
behavior_trees/: CMakeLists.txt  from_xml_example.cpp  main.cpp  run_bt.cpp  test_action_BT.xml  test_battery_BT.xml  test_condition_BT.xml  yarp_action.cpp  yarp_action.h  yarp_condition.h  yarp_node.cpp
behavior_trees/custom_leaf_nodes/: CMakeLists.txt  action_example.cpp  action_example.h  condition_example.cpp  condition_example.h
behavior_trees/lib/: CMakeLists.txt  yarp_action.cpp  yarp_node.h
behavior_trees/src/: yarp_condition.cpp
behavior_trees/xmls/: BT_example.xml  BT_leaf_nodes_example.xml  BT_rf_modules_example.xml  BT_state_charts_example.xml
components/: CMakeLists.txt  SimpleCounter.cpp
components/counter/: SimpleCounter.cpp
components_interfaces/counter/: CMakeLists.txt  Counter.cpp  counter.thrift
interfaces/: CMakeLists.txt  Skill_requestMonitorObject.cpp
interfaces/components/: CMakeLists.txt  Counter.h  (+1 more)
interfaces/skills_interface/: CMakeLists.txt  Skill_request.h
libs/: CMakeLists.txt
libs/ros2_bt_nodes/ws/src/bt_examples/: CMakeLists.txt  package.xml
libs/ros2_bt_nodes/ws/src/bt_examples/src/: run_bt_example.cpp
libs/ros2_bt_nodes/ws/src/bt_leaf_nodes_clients/: CMakeLists.txt  package.xml
libs/ros2_bt_nodes/ws/src/bt_leaf_nodes_clients/src/: bt_leaf_node_client.cpp  bt_leaf_node_client.h
libs/ros2_bt_nodes/ws/src/bt_leaf_nodes_interfaces/: CMakeLists.txt
libs/ros2_bt_nodes/ws/src/bt_leaf_nodes_servers/: CMakeLists.txt
libs/ros2_bt_nodes/ws/src/bt_leaf_nodes_servers/src/: bt_action_node_server.cpp
libs/ros2_bt_nodes/ws/src/bt_leaf_nodes_servers/src/install/: local_setup.sh  setup.sh
libs/ros2_bt_nodes/ws/src/install/: local_setup.sh  setup.sh
libs/ros2_bt_nodes/ws/src/install/bt_leaf_nodes/share/bt_leaf_nodes/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
libs/ros2_bt_nodes/ws/src/install/bt_leaf_nodes_clients/share/bt_leaf_nodes_clients/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
libs/ros2_bt_nodes/ws/src/install/bt_leaf_nodes_clients/share/bt_leaf_nodes_clients/cmake/: bt_leaf_nodes_clientsConfig.cmake
libs/ros2_bt_nodes/ws/src/install/bt_leaf_nodes_interfaces/include/bt_leaf_nodes_interfaces/bt_leaf_nodes_interfaces/action/: bt.h
libs/ros2_bt_nodes/ws/src/install/bt_leaf_nodes_interfaces/include/bt_leaf_nodes_interfaces/bt_leaf_nodes_interfaces/action/detail/: bt__builder.hpp  bt__functions.c  bt__rosidl_typesupport_fastrtps_cpp.hpp  bt__struct.h  bt__traits.hpp
libs/ros2_bt_nodes/ws/src/install/bt_leaf_nodes_interfaces/include/bt_leaf_nodes_interfaces/bt_leaf_nodes_interfaces/msg/: rosidl_generator_c__visibility_control.h
libs/ros2_bt_nodes/ws/src/install/bt_leaf_nodes_interfaces/local/lib/python3.10/dist-packages/bt_leaf_nodes_interfaces/: _bt_leaf_nodes_interfaces_s.ep.rosidl_typesupport_fastrtps_c.c  _bt_leaf_nodes_interfaces_s.ep.rosidl_typesupport_introspection_c.c
libs/ros2_bt_nodes/ws/src/install/bt_leaf_nodes_interfaces/local/lib/python3.10/dist-packages/bt_leaf_nodes_interfaces-0.0.0-py3.10.egg-info/: PKG-INFO
libs/ros2_bt_nodes/ws/src/install/bt_leaf_nodes_interfaces/local/lib/python3.10/dist-packages/bt_leaf_nodes_interfaces/action/: __init__.py  _bt.py  _bt_s.c
libs/ros2_bt_nodes/ws/src/install/bt_leaf_nodes_interfaces/share/bt_leaf_nodes_interfaces/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
libs/ros2_bt_nodes/ws/src/install/bt_leaf_nodes_interfaces/share/bt_leaf_nodes_interfaces/action/: BT.action
libs/ros2_bt_nodes/ws/src/install/bt_leaf_nodes_interfaces/share/bt_leaf_nodes_interfaces/cmake/: bt_leaf_nodes_interfacesConfig.cmake  bt_leaf_nodes_interfaces__rosidl_typesupport_cppExport-noconfig.cmake  bt_leaf_nodes_interfaces__rosidl_typesupport_introspection_cppExport-noconfig.cmake  export_bt_leaf_nodes_interfaces__rosidl_generator_cExport.cmake  export_bt_leaf_nodes_interfaces__rosidl_generator_cppExport.cmake  export_bt_leaf_nodes_interfaces__rosidl_generator_pyExport-noconfig.cmake  export_bt_leaf_nodes_interfaces__rosidl_typesupport_fastrtps_cExport.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake
libs/ros2_bt_nodes/ws/src/install/bt_leaf_nodes_servers/share/bt_leaf_nodes_servers/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
libs/ros2_bt_nodes/ws/src/install/bt_leaf_nodes_servers/share/bt_leaf_nodes_servers/cmake/: bt_leaf_nodes_serversConfig.cmake
libs/skill_interfaces/: SkillStatus.cpp  SkillStatus.h  Skill_request.cpp  Skill_request.h
libs/yarp_bt_nodes/: yarp_action.cpp  yarp_action.h  yarp_condition.cpp  yarp_condition.h  yarp_node.cpp  yarp_node.h
skills/: CMakeLists.txt
skills/action_example/: ActionExample.cpp  ActionExample.h  ActionExampleDataModel.cpp  ActionExampleDataModel.h  ActionExampleStateMachine.scxml  CMakeLists.txt  main.cpp
skills/condition_example/: CMakeLists.txt  ConditionExample.cpp  ConditionExample.h  ConditionExampleDataModel.cpp  ConditionExampleDataModel.h  ConditionExampleStateMachine.scxml  main.cpp
skills/rf_modules/action_example/: CMakeLists.txt  main.cpp
skills/rf_modules/condition_example/: CMakeLists.txt  main.cpp
skills/skill_example/: CMakeLists.txt  StateChartExample.cpp  StateChartExample.h  StateChartExampleDataModel.cpp  StateChartExampleDataModel.h  StateChartExampleStateMachine.scxml  main.cpp
skills/state_charts/: CMakeLists.txt
skills/state_charts/action_example/: ActionExample.cpp  ActionExample.h  ActionExampleDataModel.h  ActionExampleStateMachine.scxml  CMakeLists.txt  main.cpp
skills/state_charts/condition_example/: CMakeLists.txt  ConditionExample.cpp  ConditionExampleDataModel.cpp  ConditionExampleStateMachine.scxml  main.cpp
skills/state_charts/lib/: CMakeLists.txt  SCSkill.cpp  SCSkill.h
(+2 files in other folders)
