################################################################################
#                                                                              #
# Copyright (C) 2020 Fondazione Istituto Italiano di Tecnologia (IIT)          #
# All Rights Reserved.                                                         #
#                                                                              #
################################################################################

add_subdirectory(skill_interfaces)
add_subdirectory(state_chart_skills)
add_subdirectory(yarp_bt_nodes)
